--- a/EFI/CLOVER/config.plist
+++ b/EFI/CLOVER/config.plist
@@ -26,11 +26,11 @@
 	<key>Boot</key>
 	<dict>
 		<key>Arguments</key>
-		<string>-v slide=0 dart=0 darkwake=0 cpus=1 kext-dev-mode=1 debug=0x100 -no-zp</string>
+		<string>dart=0 kext-dev-mode=1</string>
 		<key>Debug</key>
-		<true/>
+		<false/>
 		<key>DefaultVolume</key>
-		<string>LastBootedVolume</string>
+		<string>Launch</string>
 		<key>IgnoreNVRAMBoot</key>
 		<true/>
 		<key>Legacy</key>
@@ -40,7 +40,7 @@
 		<key>Secure</key>
 		<false/>
 		<key>Timeout</key>
-		<integer>5</integer>
+		<integer>0</integer>
 		<key>XMPDetection</key>
 		<false/>
 	</dict>
@@ -129,10 +129,10 @@
 	</dict>
 	<key>KernelAndKextPatches</key>
 	<dict>
+		<key>AppleIntelCPUPM</key>
+		<false/>
 		<key>AppleRTC</key>
 		<true/>
-		<key>AsusAICPUPM</key>
-		<false/>
 		<key>Debug</key>
 		<false/>
 		<key>DellSMBIOSPatch</key>
@@ -149,18 +149,18 @@
 		<array>
 			<dict>
 				<key>Comment</key>
-				<string>t1-10.9-10.12-AppleHDA/Realtek ALC1150</string>
+				<string>TRIM Enabler</string>
 				<key>Disabled</key>
-				<true/>
+				<false/>
 				<key>Find</key>
 				<data>
-				ixnUEQ==
+				AEFQUExFIFNTRAA=
 				</data>
 				<key>Name</key>
-				<string>AppleHDA</string>
+				<string>IOAHCIBlockStorage</string>
 				<key>Replace</key>
 				<data>
-				AAnsEA==
+				AAAAAAAAAAAAAAA=
 				</data>
 			</dict>
 			<dict>
@@ -181,34 +181,18 @@
 			</dict>
 			<dict>
 				<key>Comment</key>
-				<string>External icons patch</string>
+				<string>t1-10.9-10.12-AppleHDA/Realtek ALC1150</string>
 				<key>Disabled</key>
-				<false/>
+				<true/>
 				<key>Find</key>
 				<data>
-				RXh0ZXJuYWw=
+				ixnUEQ==
 				</data>
 				<key>Name</key>
-				<string>AppleAHCIPort</string>
+				<string>AppleHDA</string>
 				<key>Replace</key>
 				<data>
-				SW50ZXJuYWw=
-				</data>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>TRIM Enabler</string>
-				<key>Disabled</key>
-				<false/>
-				<key>Find</key>
-				<data>
-				AEFQUExFIFNTRAA=
-				</data>
-				<key>Name</key>
-				<string>IOAHCIBlockStorage</string>
-				<key>Replace</key>
-				<data>
-				AAAAAAAAAAAAAAA=
+				AAnsEA==
 				</data>
 			</dict>
 			<dict>
@@ -227,6 +211,22 @@
 				em1sLnps
 				</data>
 			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>External icons patch</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				RXh0ZXJuYWw=
+				</data>
+				<key>Name</key>
+				<string>AppleAHCIPort</string>
+				<key>Replace</key>
+				<data>
+				SW50ZXJuYWw=
+				</data>
+			</dict>
 		</array>
 	</dict>
 	<key>RtVariables</key>
@@ -241,7 +241,7 @@
 	<key>SMBIOS</key>
 	<dict>
 		<key>BiosReleaseDate</key>
-		<string>12/22/2016</string>
+		<string>09/03/2013</string>
 		<key>BiosVendor</key>
 		<string>Apple Inc.</string>
 		<key>BiosVersion</key>
@@ -278,11 +278,11 @@
 	<key>SystemParameters</key>
 	<dict>
 		<key>InjectKexts</key>
-		<string>Yes</string>
+		<true/>
 		<key>InjectSystemID</key>
 		<true/>
 		<key>NoCaches</key>
-		<true/>
+		<false/>
 	</dict>
 </dict>
 </plist>
